--- a/css/homepage01.css
+++ b/css/homepage01.css
@@ -21,7 +21,7 @@
   flex-direction: row; }
 
 .headerlogo1 {
-  padding-top: 47px;
+  padding-top: 56px;
   display: flex;
   justify-content: flex-end;
   flex-direction: row; }
@@ -97,7 +97,64 @@ h1 {
   letter-spacing: 0.1px;
   text-align: left;
   color: #ffffff; }
+  
+.secondnav a {
+    opacity: 0.9;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2;
+    letter-spacing: 0.1px;
+    color: #f7f7f7!important;
+    text-decoration: none!important;
+}
+.secondnav a:hover,
+.secondnav a:focus,
+.secondnav a:active,
+.secondnav a:visited,
+ {
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  color: #f7f7f7!important;
+  text-decoration: none!important;
+}
 
+.secondnav1 a{
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #9d9d9d; }
+
+.secondnav1 a:visited,
+.secondnav1 a:hover,
+.secondnav1 a:active,
+.secondnav1 a:focus{
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #9d9d9d;
+  text-decoration: none; 
+}
 .bgcolor {
   background-color: #fc0606;
   height: 61px; }
@@ -107,10 +164,79 @@ h1 {
 
 .three-dives-1 {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  padding-left: 53px;
+ }
 
 .main-container {
-  display: flex; }
+  display: flex; 
+}
+.div2-div3 a{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #9d9d9d;
+}
+.div2-div3 a:active,
+.div2-div3 a:visited,
+.div2-div3 a:focus,
+.div2-div3 a:hover
+{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #9d9d9d;
+  text-decoration: none;
+}
+.div1-further{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #ff9d9d;
+}
+.div1-further a{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #ff9d9d;
+}
+.div1-further a:hover,
+.div1-further a:visited,
+.div1-further a:focus,
+.div1-further a:active
+{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #ff9d9d;
+  text-decoration: none;  
+}
+
 
 .div3 {
   font-family: AvenirNext;
@@ -120,9 +246,41 @@ h1 {
   font-stretch: normal;
   line-height: 1.5;
   letter-spacing: -0.5px;
-  opacity: 0.6;
+ 
   color: #ffffff;
 }
+
+.div3 a{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
+.div3 a:hover,
+.div3 a:visited,
+.div3 a:focus,
+.div3 a:active
+{
+  font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+ 
+  color: #ffffff;
+  text-decoration: none;
+}
+
 
 .col1 {
   background-blend-mode: normal, multiply;
@@ -496,7 +654,8 @@ h1 {
   height: 11px !important; }
 
 .opacity {
-  opacity: 1 !important; }
+  opacity: 1!important;
+ }
 
 .edu-logo {
   opacity: 0.6;
