--- a/css/homepagestories.css
+++ b/css/homepagestories.css
@@ -99,21 +99,148 @@ h1 {
   letter-spacing: 0.1px;
   text-align: left;
   color: #ffffff; }
+  .secondnav a {
+    opacity: 0.9;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2;
+    letter-spacing: 0.1px;
+    color: #f7f7f7!important;
+    text-decoration: none!important;
+}
+.secondnav a:hover,
+.secondnav a:focus,
+.secondnav a:active,
+.secondnav a:visited,
+ {
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  color: #f7f7f7!important;
+  text-decoration: none!important;
+}
+
+.secondnav1 a{
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #9d9d9d; }
+
+.secondnav1 a:visited,
+.secondnav1 a:hover,
+.secondnav1 a:active,
+.secondnav1 a:focus{
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #9d9d9d;
+  text-decoration: none; 
+}
 
 .bgcolor {
   background-color: #fc0606;
-  height: 61px; }
+  height: 61px; 
+}
 
 .hite {
-  height: 449px; }
+  height: 449px; 
+}
 
 .three-dives-1 {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column; 
+}
 
 .main-container {
-  display: flex; }
-
+  display: flex; 
+}
+  .div2-div3 a{
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #9d9d9d;
+  }
+  .div2-div3 a:active,
+  .div2-div3 a:visited,
+  .div2-div3 a:focus,
+  .div2-div3 a:hover
+  {
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #9d9d9d;
+    text-decoration: none;
+  }
+  .div1-further{
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #ff9d9d;
+  }
+  .div1-further a{
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #ff9d9d;
+  }
+  .div1-further a:hover,
+  .div1-further a:visited,
+  .div1-further a:focus,
+  .div1-further a:active
+  {
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #ff9d9d;
+    text-decoration: none;  
+  }
+  
+  
 .div3 {
   font-family: AvenirNext;
   font-size: 28px;
@@ -123,8 +250,38 @@ h1 {
   line-height: 1.5;
   letter-spacing: -0.5px;
   opacity: 0.6;
-  color: #ffffff; }
-
+  color: #ffffff; 
+}
+  .div3 a{
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    opacity: 0.6;
+    color: #ffffff; 
+  }
+    .div3 a:focus,
+    .div3 a:visited,
+    .div3 a:active,
+    .div3 a:hover
+    {
+      font-family: AvenirNext;
+      font-size: 28px;
+      font-weight: 600;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.5;
+      letter-spacing: -0.5px;
+      opacity: 0.6;
+      color: #ffffff;
+    text-decoration: none;
+   }
+.opacity{
+  opacity: 1!important;
+}      
 .col1 {
   background-blend-mode: normal, multiply;
   background-image: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/Knee-Joint.jpg");
