--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/doctor-w-dog.jpg) no-repeat;
     background-size: 100%; }
 
-.headerlogo .top-logo {
-    margin-left: -17px; }
+
 
 .hero-row-1 {
     display: flex;
@@ -15,13 +14,14 @@
     src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
 .headerlogo {
+    padding-left: 0px!important;
     padding-top: 47px;
     display: flex;
     justify-content: flex-start;
     flex-direction: row; }
 
 .headerlogo1 {
-    padding-top: 59px;
+    padding-top: 66px;
     display: flex;
     justify-content: flex-end;
     flex-direction: row; }
@@ -96,7 +96,65 @@ h1 {
     line-height: 2;
     letter-spacing: 0.1px;
     text-align: left;
-    color: #ffffff; }
+    color: #ffffff; 
+}
+.secondnav a {
+    opacity: 0.9;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2;
+    letter-spacing: 0.1px;
+    color: #f7f7f7!important;
+    text-decoration: none!important;
+}
+.secondnav a:hover,
+.secondnav a:focus,
+.secondnav a:active,
+.secondnav a:visited,
+ {
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  color: #f7f7f7!important;
+  text-decoration: none!important;
+}
+
+.secondnav1 a{
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #9d9d9d; }
+
+.secondnav1 a:visited,
+.secondnav1 a:hover,
+.secondnav1 a:active,
+.secondnav1 a:focus{
+  opacity: 0.9;
+  font-family: AvenirNext;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #9d9d9d;
+  text-decoration: none; 
+}
 
 .bgcolor {
     background-color: #fc0606;
@@ -107,22 +165,153 @@ h1 {
 
 .three-dives-1 {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column; 
+    
+}
+.three-dives-2 {
+    display: flex;
+    flex-direction: column; 
+    padding-left: 53px;
+}
+.three-dives-2 a{
+    font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #9d9d9d;
+  text-decoration: none;
+}
+.three-dives-2 a:hover,
+.three-dives-2 a:active,
+.three-dives-2 a:focus,
+.three-dives-2 a:visited
+{
+    font-family: AvenirNext;
+  font-size: 28px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: -0.5px;
+  text-align: left;
+  color: #9d9d9d;
+  text-decoration: none;
+}
+
 
 .main-container {
     display: flex; }
 
-.div3 {
-    font-family: AvenirNext;
-    font-size: 28px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: -0.5px;
-    opacity: 0.6;
-    color: #ffffff;
-}
+    .div2-div3 a{
+        font-family: AvenirNext;
+        font-size: 28px;
+        font-weight: 600;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: -0.5px;
+        text-align: left;
+        color: #9d9d9d;
+      }
+      .div2-div3 a:active,
+      .div2-div3 a:visited,
+      .div2-div3 a:focus,
+      .div2-div3 a:hover
+      {
+        font-family: AvenirNext;
+        font-size: 28px;
+        font-weight: 600;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: -0.5px;
+        text-align: left;
+        color: #9d9d9d;
+        text-decoration: none;
+      }
+      .div1-further{
+        font-family: AvenirNext;
+        font-size: 28px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: -0.5px;
+        text-align: left;
+        color: #ff9d9d;
+      }
+      .div1-further a{
+        font-family: AvenirNext;
+        font-size: 28px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: -0.5px;
+        text-align: left;
+        color: #ff9d9d;
+      }
+      .div1-further a:hover,
+      .div1-further a:visited,
+      .div1-further a:focus,
+      .div1-further a:active
+      {
+        font-family: AvenirNext;
+        font-size: 28px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: -0.5px;
+        text-align: left;
+        color: #ff9d9d;
+        text-decoration: none;  
+      }
+      
+      
+    .div3 {
+      font-family: AvenirNext;
+      font-size: 28px;
+      font-weight: 600;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.5;
+      letter-spacing: -0.5px;
+      opacity: 0.6;
+      color: #ffffff; 
+    }
+      .div3 a{
+        font-family: AvenirNext;
+        font-size: 28px;
+        font-weight: 600;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.5;
+        letter-spacing: -0.5px;
+        opacity: 0.6;
+        color: #ffffff; 
+      }
+        .div3 a:focus,
+        .div3 a:visited,
+        .div3 a:active,
+        .div3 a:hover
+        {
+          font-family: AvenirNext;
+          font-size: 28px;
+          font-weight: 600;
+          font-style: normal;
+          font-stretch: normal;
+          line-height: 1.5;
+          letter-spacing: -0.5px;
+          opacity: 0.6;
+          color: #ffffff;
+        text-decoration: none;
+       }
+    
 
 .col1 {
     background-blend-mode: normal, multiply;
@@ -144,7 +333,8 @@ h1 {
 .col4 {
     mix-blend-mode: multiply;
     background-blend-mode: normal, color, multiply;
-    background: linear-gradient(rgba(255, 0, 0, 0.6), rgba(255, 0, 0, 0.6)), linear-gradient(#383c41, #5a6775), linear-gradient(#a49f9f, #9d9d9d), url(../assets/Knee-Joint.jpg) no-repeat;
+    background-image: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/Knee-Joint.jpg");
+    background-repeat: no-repeat;
     background-size: 100%;
 }
 
@@ -351,7 +541,7 @@ h1 {
     font-style: normal;
     font-stretch: normal;
     line-height: 0.8;
-    letter-spacing: 39px;
+    letter-spacing: 45px;
     color: #ffffff;
 }
 
