--- a/css/academylandingcombine.css
+++ b/css/academylandingcombine.css
@@ -1,7 +1,3 @@
-/* a{
-  color: #f7f7f7!important;
-  text-decoration: none!important;
-} */
 
   
   .hero-row-1 {
@@ -1936,3 +1932,280 @@
   width: 364px;
   text-align: center;
 }
+/*commons of academylandingpage01 */
+#hero01 {
+  background-blend-mode: normal, multiply;
+  background:linear-gradient(rgba(4, 4, 4, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(221deg, rgb(255, 255, 255), rgb(19, 19, 19)), url(../assets/kittenhand.png)no-repeat;
+  background-size: 100%; 
+}
+
+#three-slider01 .first-div {
+        height: 333px;
+        background-blend-mode: normal, color, overlay, multiply;
+        background: linear-gradient(rgba(208, 2, 27, 0.6), rgba(208, 2, 27, 0.6)), linear-gradient(#a6192e, #a6192e), linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), url("../assets/cutegirl.jpg") no-repeat;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start; }
+#the-three-dives01{
+          background: -moz-linear-gradient(left, #a6192e 0%, #a6192e 42%, #9c101b 45%, #9c101b 45%, #9c101b 100%);
+          background: -webkit-linear-gradient(left, #a6192e 0%,#a6192e 42%,#9c101b 45%,#9c101b 45%,#9c101b 100%);
+          background: linear-gradient(to right, #a6192e 0%,#a6192e 42%,#9c101b 45%,#9c101b 45%,#9c101b 100%);
+}
+#the-three-dives01 .col3 {
+        background-blend-mode: normal, multiply;
+        background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("../assets/col3.jpg");
+        background-size: 100% 100%; }
+      
+#the-three-dives01 .col2 {
+        background-color: #fc0606; 
+}
+      
+#the-three-dives01 .col4 {
+        background-blend-mode: normal, multiply, soft-light, multiply;
+        background: linear-gradient(rgba(166, 25, 46, 0.3), rgba(166, 25, 46, 0.3)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(rgba(252, 6, 6, 0.3), rgba(252, 6, 6, 0.3)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/cutegirl.jpg") no-repeat;
+        background-size: 100%; 
+}
+
+/* emerging tends */
+
+#hero-trends {
+  background-blend-mode: normal, multiply;
+  background:linear-gradient(rgba(4, 4, 4, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(221deg, rgb(255, 255, 255), rgb(19, 19, 19)), url(../assets/catinthehands.jpeg)no-repeat;
+  background-size: cover; 
+}
+
+
+#the-three-dives-trends{
+      background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+      background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%); 
+      background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+}
+
+
+#the-three-dives-trends .col3 {
+  background-blend-mode: normal, multiply;
+  background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("../assets/col3.jpg");
+  background-size: 100% 100%; }
+
+  #the-three-dives-trends .col2 {
+  background-color: #fc0606; }
+
+  #the-three-dives-trends .col4 {
+  background-blend-mode: normal, soft-light, multiply;
+  background:linear-gradient(to bottom, #353535, rgba(32, 33, 33, 0.05)), linear-gradient(#54585a, rgb(0, 0, 0)), linear-gradient(#54585a, rgba(84, 88, 90, 0.21)), url(../assets/emergingtrendsgerms.jpg) no-repeat;
+  background-size: 100%; 
+}
+
+
+#three-slider-trends .first-div {
+  height: 333px;
+  background-blend-mode: normal, color, overlay, multiply;
+  background: linear-gradient(rgba(208, 2, 27, 0.6), rgba(208, 2, 27, 0.6)), linear-gradient(#a6192e, #a6192e), linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), url("../assets/cutegirl.jpg") no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; }
+
+
+
+  #logo-one-trends p {
+    opacity: 0.6 !important;
+    font-family: AvenirNext !important;
+    font-size: 36px !important;
+    font-weight: normal !important;
+    font-style: normal !important;
+    font-stretch: normal !important;
+    line-height: 1 !important;
+    letter-spacing: 26px !important;
+    text-align: left !important;
+    color: #ffffff !important;
+    padding-top: 126px !important;
+}
+      
+ /* wellness */
+ #hero-wellness {
+  background-blend-mode: normal, multiply;
+  background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/redcat.jpg") no-repeat;
+  background-size: 100%; 
+}
+#the-three-dives-well{
+    background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+    background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+    background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+}
+#the-three-dives-well .col3 {
+    background-blend-mode: normal, multiply;
+    background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("../assets/col3.jpg");
+    background-size: 100% 100%; 
+}
+  
+#the-three-dives-well .col2 {
+    background-color: #fc0606; 
+}
+  
+#the-three-dives-well .col4 {
+    background-blend-mode: normal, multiply, soft-light, multiply;
+    background:linear-gradient(to bottom, #353535, rgba(32, 33, 33, 0.05)), linear-gradient(#54585a, rgb(0, 0, 0)), linear-gradient(#54585a, rgba(84, 88, 90, 0.21)), url(../assets/emergingtrendsgerms.jpg) no-repeat;
+    background-size: 100%; 
+}
+#three-slider-well .first-div {
+      height: 333px;
+      background-blend-mode: normal, color, overlay, multiply;
+      background: linear-gradient(rgba(208, 2, 27, 0.6), rgba(208, 2, 27, 0.6)), linear-gradient(#a6192e, #a6192e), linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), url("../assets/cutegirl.jpg") no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start; 
+}
+
+          
+#logo-one-well p {
+  opacity: 0.6 !important;
+  font-family: AvenirNext !important;
+  font-size: 36px !important;
+  font-weight: normal !important;
+  font-style: normal !important;
+  font-stretch: normal !important;
+  line-height: 1 !important;
+  letter-spacing: 26px !important;
+  text-align: left !important;
+  color: #ffffff !important;
+  padding-top: 126px !important;
+}
+/* minimally invasive */
+
+
+#hero-invasive {
+  background-blend-mode: normal, multiply;
+  background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)),url(../assets/bulldog.jpg) no-repeat;
+  background-size: cover; 
+}
+#the-three-dives-invasive{
+background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%); 
+background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+}
+
+#the-three-dives-invasive .col3 {
+background-blend-mode: normal, multiply;
+background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("../assets/col3.jpg");
+background-size: 100% 100%; 
+}
+#the-three-dives-invasive .col4 
+{
+  background-blend-mode: normal, soft-light, multiply;
+  background-image: linear-gradient(rgba(21, 0, 3, 0.68), rgba(177, 158, 161, 0.3)), linear-gradient(rgba(37, 28, 28, 0.6), rgb(101, 36, 36)), linear-gradient(to bottom, #f5515f, rgb(62, 37, 41)),url(../assets/dinasaurskeleton.png);
+  background-size: 100%; 
+}
+
+#three-slider-invasive .first-div {
+height: 333px;
+background-blend-mode: normal, color, overlay, multiply;
+background: linear-gradient(rgba(208, 2, 27, 0.6), rgba(208, 2, 27, 0.6)), linear-gradient(#a6192e, #a6192e), linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), url("../assets/cutegirl.jpg") no-repeat;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+}
+#logo-one-invasive p {
+      opacity: 0.6 !important;
+      font-family: AvenirNext !important;
+      font-size: 36px !important;
+      font-weight: normal !important;
+      font-style: normal !important;
+      font-stretch: normal !important;
+      line-height: 1 !important;
+      letter-spacing: 26px !important;
+      text-align: left !important;
+      color: #ffffff !important;
+      padding-top: 126px !important;
+  }
+
+  
+  /* academylandingpage */
+  #hero-alp {
+    background-blend-mode: normal, multiply;
+    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/SmilingwithDogSmall.jpg") no-repeat;
+    background-size: 100%; }
+    #the-three-dives-alp{
+      background: -moz-linear-gradient(left, #a6192e 0%, #a6192e 42%, #9c101b 45%, #9c101b 45%, #9c101b 100%);
+      background: -webkit-linear-gradient(left, #a6192e 0%,#a6192e 42%,#9c101b 45%,#9c101b 45%,#9c101b 100%);
+      background: linear-gradient(to right, #a6192e 0%,#a6192e 42%,#9c101b 45%,#9c101b 45%,#9c101b 100%);
+    }
+    #three-slider-alp .first-div {
+            height: 333px;
+            background-blend-mode: normal, color, overlay, multiply;
+            background: linear-gradient(rgba(208, 2, 27, 0.6), rgba(208, 2, 27, 0.6)), linear-gradient(#a6192e, #a6192e), linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), url("../assets/cutegirl.jpg") no-repeat;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start; }
+  #the-three-dives-alp .col3 {
+              background-blend-mode: normal, multiply;
+              background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("../assets/col3.jpg");
+              background-size: 100% 100%; }
+            
+            #the-three-dives-alp .col2 {
+              background-color: #fc0606; }
+            
+            #the-three-dives-alp .col4 {
+              background-blend-mode: normal, multiply, soft-light, multiply;
+              background: linear-gradient(rgba(166, 25, 46, 0.3), rgba(166, 25, 46, 0.3)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(rgba(252, 6, 6, 0.3), rgba(252, 6, 6, 0.3)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/cutegirl.jpg") no-repeat;
+              background-size: 100%; }
+    
+              #logo-one-alp p {
+                opacity: 0.6 !important;
+                font-family: AvenirNext !important;
+                font-size: 36px !important;
+                font-weight: normal !important;
+                font-style: normal !important;
+                font-stretch: normal !important;
+                line-height: 1 !important;
+                letter-spacing: 26px !important;
+                text-align: left !important;
+                color: #ffffff !important;
+                padding-top: 126px !important;
+}
+
+/* painmanagment */
+#hero-pain {
+  background-blend-mode: normal, multiply;
+  background-image: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/doctor-w-dog.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%; }
+  #the-three-dives-pain .col3 {
+    background-blend-mode: normal, multiply;
+    background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("/assets/col3.jpg");
+    background-size: 100% 100%; }
+  
+    #the-three-dives-pain .col2 {
+    background-color: #fc0606; }
+  
+    #the-three-dives-pain .col4 {
+    background-blend-mode: normal, multiply, soft-light, multiply;
+    background-image: linear-gradient(rgba(166, 25, 46, 0.3), rgba(166, 25, 46, 0.3)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(rgba(252, 6, 6, 0.3), rgba(252, 6, 6, 0.3)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/sad-dog.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; }
+  
+
+#three-slider-pain .first-div {
+    height: 333px;
+    background-blend-mode: normal, color, overlay, multiply;
+    background-image: linear-gradient(rgba(208, 2, 27, 0.6), rgba(208, 2, 27, 0.6)), linear-gradient(#a6192e, #a6192e), linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), url("../assets/cutegirl.jpg");
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; }
+   
+#logo-one-pain p {
+            opacity: 0.6;
+            font-family: AvenirNext;
+            font-size: 36px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1;
+            letter-spacing: 33px;
+            text-align: left;
+            color: #ffffff;
+            padding-top: 126px;
+            text-transform: uppercase;
+          }
+              
+
